# python-dev-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile.template  README.md  SETUP-GUIDE.md  install.sh  pyproject.toml
.github/workflows/: publish-to-pypi.yml
configs/: .flake8  .pre-commit-config.yaml  pyproject.toml.template
