[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dev-toolkit"
version = "0.1.0"  # Mettez à jour cette version avant chaque release
description = "Un ensemble d'outils et de configurations standardisées pour le développement Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ClaraVnk", email = "loutre@ikmail.com"}  # Remplacez par votre email
]
keywords = ["python", "development", "tools", "linting", "formatting", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.5",
    "isort>=5.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ClaraVnk/python-dev-toolkit"
Repository = "https://github.com/ClaraVnk/python-dev-toolkit"
Issues = "https://github.com/ClaraVnk/python-dev-toolkit/issues"

[tool.bandit]
exclude_dirs = ["/tests"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.setuptools]
packages = []  # Pas de packages Python à installer, juste des fichiers de config
include-package-data = true

[tool.setuptools.package-data]
"*" = ["configs/*", "*.template", "*.sh"]
